Fixed the problem in login page
Fixed the problem of not showing input when type in on the login page

--- a/bloodline/static/bloodline/css/style.css
+++ b/bloodline/static/bloodline/css/style.css
@@ -91,6 +91,10 @@ button.navbar-toggle > span.icon-bar {
     color:white;
 }
 
+input[type="text"]{
+    color:black;
+}
+
 .login-box{
     margin-top: 100px;
 }
